Fixed so that canvas covers the title div

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,7 @@ span {
 
 canvas {
     position:absolute;
-    top:0;
     left:0;
-    bottom:0;
 }
 
 section {
@@ -68,11 +66,6 @@ section {
 
 .nav-link {
     font-size: 1.2rem
-}
-
-/* Download Buttons */
-.download-button {
-    margin: 5% 3% 5% 0;
 }
 
 /* Title Section */
